--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body{
   overflow: hidden;
   margin: 0;
-  background-color: black;
+  background-color: gainsboro;
 }
 
 #target{
@@ -10,6 +10,7 @@ body{
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  flex-direction: column;
 }
 
 #target img{
